--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -5,8 +5,10 @@
 {% url 'user_communities' user.username as user_communities_url %}
 {% url 'search_all_topics' as search_all_topics_url %}
 {% url 'searches' as searches_url %}
+{% url 'saved_searches' user.username as saved_searches_url %}
 {% url 'community' community.slug as community_url %}
 {% url 'search_user_topics' user.username as search_user_topics_url %}
+
 
 <nav class="navbar navbar-vertical fixed-start navbar-expand-md" id="sidebar">
   <div class="container-fluid">
@@ -74,7 +76,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark fs-12 {% if request.path == user_topics_url or request.path == user_communities_url or request.path == search_user_topics_url %}active fw-800{% endif %}" href="{% url 'user_topics' user.username %}">
+          <a class="nav-link text-dark fs-12 {% if request.path == user_topics_url or request.path == user_communities_url or request.path == search_user_topics_url or request.path == saved_searches_url %}active fw-800{% endif %}" href="{% url 'user_topics' user.username %}">
             Profile
           </a>
         </li>
