--- a/templates/search/saved_searches.html
+++ b/templates/search/saved_searches.html
@@ -24,11 +24,11 @@
           </h1>
         </div>
       </div>
-      <div class="row align-items-center mt-4">
+      <div class="row align-items-center">
         <div class="col">
           <ul class="nav nav-tabs nav-overflow header-tabs">
             <li class="nav-item">
-              <a href="{% url 'user_topics' user.username %}" class="nav-link active">
+              <a href="{% url 'user_topics' user.username %}" class="nav-link">
                 Topics
               </a>
             </li>
@@ -38,7 +38,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="{% url 'saved_searches' %}" class="nav-link">
+              <a href="{% url 'saved_searches' %}" class="nav-link active">
                 Saved 
               </a>
             </li>
@@ -58,11 +58,18 @@
     </div>
   </div>
 </div>
-<form action="{% url 'search_user_topics' %}" method="get" class="mt-4">
-  <div class="input-group mb-3">
-    <input type="search" name="q" value="{{ request.GET.q|default:'' }}" placeholder="Search your topics" class="form-control" autocomplete="off">
-    <button class="btn btn-outline-secondary" type="submit">Search</button>
+<div class="row">
+  <div class="col-12 col-xl-12">
+    <div class="card card-fill shadow-none">
+      <div class="card-header">
+        <h4 class="card-header-title">
+          Saved Searches
+        </h4>
+      </div>
+      <div class="card-body">
+        {% include 'search/partials/_saved_searches.html' %}
+      </div> 
+    </div>
   </div>
-</form>
-{% include '../topics/partials/u_topics.html' %}
+</div>
 {% endblock content %}
