--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -41,7 +41,7 @@
       </form>
       <ul class="navbar-nav mb-md-4">
         <li class="nav-item">
-          <a class="nav-link text-dark fs-12" href="">
+          <a class="nav-link text-dark fs-12" href="{% url 'topics_foryou_based_on_communities_you_follow' %}">
             For You
           </a>
         </li>
