--- a/templates/topics/posts_for_you_based_on_communities_you_follow.html
+++ b/templates/topics/posts_for_you_based_on_communities_you_follow.html
@@ -1,42 +1,37 @@
-{% extends '../base.html' %}
+{% extends 'base.html' %}
 {% load humanize %}
+{% block title %}Posts for you{% endblock %}
 {% block content %}
-<div class="header">
+<nav class="navbar navbar-expand-xl mt-4 mb-4 border rounded-2 px-4">
   <div class="container-fluid">
-    <div class="header-body">
-      <div class="row align-items-end">
-        <div class="col">
-          <h1 class="header-title fs-11">
-            {{ category.name|capfirst }}&nbsp;&nbsp;&nbsp;<span class="fs-08 text-dark" data-bs-toggle="collapse" href="#description" role="button" aria-expanded="false" aria-controls="description"><i class="bi bi-info-circle"></i></span>
-          </h1>
-        </div>
-        <div class="col-auto">
-          <a href="#!" class="btn btn-sm btn-primary lift">
-           Follow
-          </a>
-        </div>
-      </div>
-      <div class="row align-items-end mt-3 collapse" id="description">
-        <div class="col">
-          <p class="header-subtitle fs-1 text-dark">
-            {{ category.description }}
-          </p>
-        </div>
-      </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="{% url 'posts_foryou_based_on_communities_you_follow' %}">Posts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'topics_foryou_based_on_communities_you_follow' %}">Topics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'communities_you_follow' %}">Communities</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#!">Following</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#!">Keywords</a>
+        </li>
+      </ul>
     </div>
   </div>
-</div>
-<form action="" method="get" class="mt-4">
-  <div class="input-group mb-3">
-    <input type="search" name="q" value="{{ request.GET.q|default:'' }}" placeholder="Search topics" class="form-control" autocomplete="off">
-    <button class="btn btn-outline-secondary" type="submit">Search</button>
-  </div>
-</form>
+</nav>
 <div class="card shadow-none">
-  {% for community in communities %}
   {% for topic in topics %}
   <div class="card-body border-bottom">
-    <div class="mb-3">
+    <div class="mb-4">
       <div class="row align-items-center">
         <div class="col-auto">
           {% if topic.user.avatar %}
@@ -57,21 +52,17 @@
             <time datetime="{{topic.created|date:'Y-m-d H:i'}}">{{ topic.created|naturaltime }}</time>
           </p>
         </div>
-        <div class="card-header border-0">
+        <div class="col-auto">
+          <a href="{% url 'topic' topic.community.slug topic.pk %}" class="btn btn-sm btn-white">
+            {{ topic.community.name }}
+          </a>
+        </div>
+        <!-- <div class="card-header border-0">
           <h2 class="card-header-title fw-800">
             <a href="{% url 'topic' topic.community.slug topic.pk %}">
               {{ topic.title }}
             </a>
           </h2>
-        </div>
-        <!-- <div class="col-auto">
-          <div class="dropdown">
-            <div class="dropdown-menu dropdown-menu-end" style="">
-              <a href="#!" class="dropdown-item">
-                Hello
-              </a>
-            </div>
-          </div>
         </div> -->
       </div>
     </div>
@@ -102,6 +93,5 @@
     </div>
   </div>
   {% endfor %}
-  {% endfor %}
 </div>
-{% endblock content %}
+{% endblock %}
